# InvestmentReporting.Market/Dto/VirtualBalanceDto.cs
@@ -1,0 +1,3 @@
+namespace InvestmentReporting.Market.Dto {
+	public record VirtualBalanceDto(decimal RealPrice, decimal VirtualPrice, string Currency);
+}
