# InvestmentReporting.Market/Entity/VirtualBalance.cs
@@ -1,0 +1,5 @@
+using InvestmentReporting.Domain.Entity;
+
+namespace InvestmentReporting.Market.Entity {
+	public record VirtualBalance(decimal RealPrice, decimal VirtualPrice, CurrencyId Currency);
+}
