# InvestmentReporting.Market/Entity/VirtualState.cs
@@ -1,5 +1,5 @@
 using System.Collections.Generic;
 
 namespace InvestmentReporting.Market.Entity {
-	public record VirtualState(IReadOnlyCollection<VirtualAsset> Inventory);
+	public record VirtualState(IReadOnlyCollection<VirtualBalance> Balances, IReadOnlyCollection<VirtualAsset> Inventory);
 }
